src/test/deca/syntax/parser/invalid/main_block_braces_not_closed.deca
// Test de parser, les accolades du block dans main doivent être fermées

{
    int x = 5;